// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractorBanner Rendering should match snapshot with null user 1`] = `
<View
  colors={
    [
      "#134E4A",
      "#0D9488",
      "#14B8A6",
    ]
  }
  end={
    {
      "x": 1,
      "y": 1,
    }
  }
  start={
    {
      "x": 0,
      "y": 0,
    }
  }
  style={
    {
      "borderRadius": 24,
      "marginBottom": 8,
      "marginTop": 16,
      "overflow": "hidden",
      "padding": 24,
      "shadowColor": "#134E4A",
      "shadowOffset": {
        "height": 10,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 20,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "rgba(255,255,255,0.06)",
        "borderRadius": 90,
        "height": 180,
        "position": "absolute",
        "right": -40,
        "top": -60,
        "width": 180,
      }
    }
  />
  <View
    style={
      {
        "backgroundColor": "rgba(255,255,255,0.04)",
        "borderRadius": 60,
        "bottom": -40,
        "height": 120,
        "left": -20,
        "position": "absolute",
        "width": 120,
      }
    }
  />
  <View
    style={
      {
        "backgroundColor": "rgba(255,255,255,0.05)",
        "borderRadius": 8,
        "height": 60,
        "position": "absolute",
        "right": 60,
        "top": 30,
        "transform": [
          {
            "rotate": "45deg",
          },
        ],
        "width": 60,
      }
    }
  />
  <View
    style={
      {
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "rgba(255,255,255,0.7)",
          "fontSize": 13,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "marginBottom": 4,
          "textTransform": "uppercase",
        }
      }
    >
      Good evening
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 28,
          "fontWeight": "700",
          "letterSpacing": -0.5,
          "marginBottom": 20,
        }
      }
    >
      Contractor
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 24,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 30,
              "fontWeight": "700",
              "letterSpacing": -0.3,
            }
          }
        >
          0
        </Text>
        <Text
          style={
            {
              "color": "rgba(255,255,255,0.7)",
              "fontSize": 12,
              "fontWeight": "500",
              "marginTop": 2,
            }
          }
        >
          Active Jobs
        </Text>
      </View>
      <View
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.2)",
            "height": 32,
            "marginHorizontal": 20,
            "width": 1,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "flex-start",
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 30,
              "fontWeight": "700",
              "letterSpacing": -0.3,
            }
          }
        >
          £
          0
        </Text>
        <Text
          style={
            {
              "color": "rgba(255,255,255,0.7)",
              "fontSize": 12,
              "fontWeight": "500",
              "marginTop": 2,
            }
          }
        >
          This Month
        </Text>
      </View>
    </View>
    <TouchableOpacity
      accessibilityLabel="Browse available jobs"
      accessibilityRole="button"
      activeOpacity={0.85}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": undefined,
          "borderRadius": 14,
          "flexDirection": "row",
          "gap": 8,
          "paddingHorizontal": 20,
          "paddingVertical": 13,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 6,
        }
      }
    >
      <Text
        style={
          {
            "color": undefined,
            "fontSize": 15,
            "fontWeight": "700",
          }
        }
      >
        Browse Available Jobs
      </Text>
      <Ionicons
        name="arrow-forward"
        size={16}
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`ContractorBanner Rendering should match snapshot with valid user 1`] = `
<View
  colors={
    [
      "#134E4A",
      "#0D9488",
      "#14B8A6",
    ]
  }
  end={
    {
      "x": 1,
      "y": 1,
    }
  }
  start={
    {
      "x": 0,
      "y": 0,
    }
  }
  style={
    {
      "borderRadius": 24,
      "marginBottom": 8,
      "marginTop": 16,
      "overflow": "hidden",
      "padding": 24,
      "shadowColor": "#134E4A",
      "shadowOffset": {
        "height": 10,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 20,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "rgba(255,255,255,0.06)",
        "borderRadius": 90,
        "height": 180,
        "position": "absolute",
        "right": -40,
        "top": -60,
        "width": 180,
      }
    }
  />
  <View
    style={
      {
        "backgroundColor": "rgba(255,255,255,0.04)",
        "borderRadius": 60,
        "bottom": -40,
        "height": 120,
        "left": -20,
        "position": "absolute",
        "width": 120,
      }
    }
  />
  <View
    style={
      {
        "backgroundColor": "rgba(255,255,255,0.05)",
        "borderRadius": 8,
        "height": 60,
        "position": "absolute",
        "right": 60,
        "top": 30,
        "transform": [
          {
            "rotate": "45deg",
          },
        ],
        "width": 60,
      }
    }
  />
  <View
    style={
      {
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "rgba(255,255,255,0.7)",
          "fontSize": 13,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "marginBottom": 4,
          "textTransform": "uppercase",
        }
      }
    >
      Good evening
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 28,
          "fontWeight": "700",
          "letterSpacing": -0.5,
          "marginBottom": 20,
        }
      }
    >
      John Smith
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 24,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 30,
              "fontWeight": "700",
              "letterSpacing": -0.3,
            }
          }
        >
          0
        </Text>
        <Text
          style={
            {
              "color": "rgba(255,255,255,0.7)",
              "fontSize": 12,
              "fontWeight": "500",
              "marginTop": 2,
            }
          }
        >
          Active Jobs
        </Text>
      </View>
      <View
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.2)",
            "height": 32,
            "marginHorizontal": 20,
            "width": 1,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "flex-start",
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 30,
              "fontWeight": "700",
              "letterSpacing": -0.3,
            }
          }
        >
          £
          0
        </Text>
        <Text
          style={
            {
              "color": "rgba(255,255,255,0.7)",
              "fontSize": 12,
              "fontWeight": "500",
              "marginTop": 2,
            }
          }
        >
          This Month
        </Text>
      </View>
    </View>
    <TouchableOpacity
      accessibilityLabel="Browse available jobs"
      accessibilityRole="button"
      activeOpacity={0.85}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": undefined,
          "borderRadius": 14,
          "flexDirection": "row",
          "gap": 8,
          "paddingHorizontal": 20,
          "paddingVertical": 13,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 6,
        }
      }
    >
      <Text
        style={
          {
            "color": undefined,
            "fontSize": 15,
            "fontWeight": "700",
          }
        }
      >
        Browse Available Jobs
      </Text>
      <Ionicons
        name="arrow-forward"
        size={16}
      />
    </TouchableOpacity>
  </View>
</View>
`;
